--- a/source/sass/blocks/icon-sprites.scss
+++ b/source/sass/blocks/icon-sprites.scss
@@ -59,3 +59,20 @@
 .logo-htmlacademy:active {
   opacity: 0.3;
 }
+
+.icon {
+  position: absolute;
+  top: 10px;
+  right: 8px;
+  opacity: 0.2;
+}
+
+.icon-phone {
+  width: 25px;
+  height: 24px;
+}
+
+.icon-mail {
+  width: 32px;
+  height: 21px;
+}
