--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,16 +1,9 @@
-.footer__social {
+.social__btn {
   display: flex;
-  align-content: center;
-  width: 50px;
-  height: 50px;
-  margin-right: 500px;
-  background-color: red;
-}
+  justify-content: center;
+  align-items: center;
 
-/*
-.social-btn {
-
-}
+}/*
 .social-btn-inst {}
 .social-btn-fb {}
 .social-btn-twit {}
