--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,14 +3,17 @@
 
   @media (min-width: $tablet-width) {
     padding: 0 52px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid $bg-30;
   }
 
   @media (min-width: $desktop-width) {
     padding: 0;
     width: 1150px;
     position: relative;
+    justify-content: flex-end;
   }
 }
 
