--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,6 +1,3 @@
-* {
-  outline: 1px solid red;
-}
 
 body {
   font-family: "Open Sans", "Tahoma", sans-serif;
@@ -10,25 +7,21 @@ body {
   line-height: 1.5;
   letter-spacing: 0.01em;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 0;
   background-color: #ffffff;
-
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-  }
 }
 
 a {
   text-decoration: none;
   color: #000000;
+  padding: 0;
+  margin: 0;
 }
 
 img {
   max-width: 100%;
   height: auto;
+  padding: 0;margin: 0;
 }
 
 p {
