--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/about-us.scss";
 @import "blocks/features.scss";
 @import "blocks/footer.scss";
+@import "blocks/social.scss";
 @import "blocks/catalog.scss";
 @import "blocks/card.scss";
 @import "blocks/popup.scss";
