--- a/source/sass/blocks/logo-wrapper.scss
+++ b/source/sass/blocks/logo-wrapper.scss
@@ -1,6 +1,6 @@
 .logo-wrapper {
   box-sizing: border-box;
-  height: 80px;
+  height: auto;
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid #ececec;
