--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   @media (min-width: $tablet-width) {
-    width: 100%;
+    width: auto;
     margin: 52px;
   }
 
