--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    margin-left: 225px;
+    margin-left: 52px;
   }
 
   @media (min-width: $desktop-width) {
@@ -22,13 +22,18 @@
 }
 
 
-.fieldset__container--checbx {
+.form .fieldset__container--checbx {
   margin: 46px 0;
 
   @media (min-width: $tablet-width) {
-    margin: 66px 0;
-    padding-left: 203px;
+    width: 35%;
+    margin: 66px 0 60px;
+    padding-left: 78px;
     box-sizing: border-box;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 320px;
   }
 }
 
@@ -38,17 +43,18 @@
   }
 }
 
-.fielset__legen {
+.fielset__legend {
   text-transform: uppercase;
   font-weight: 700;
   color: #63d1bb;
   font-size: 17px;
+  line-height: 0.94;
   margin-bottom: 13px;
 
   @media (min-width: $tablet-width) {
     position: absolute;
     top: 69px;
-    left: 52px;
+    left: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -101,8 +107,8 @@
   }
 }
 
-.fielset__legen--tel,
-.fielset__legen--email {
+.fielset__legend--tel,
+.fielset__legend--email {
   margin: 0;
 }
 
@@ -112,6 +118,15 @@
   margin-bottom: 15px;
   width: 85%;
   margin-left: 57px;
+}
+
+.fieldset__container--checbx {
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    width: auto;
+    display: flex;
+  }
 }
 
 .fieldset__wrapper--tel {
