--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -12,6 +12,31 @@
 
   @media (min-width: $tablet-width) {
     align-self: flex-start;
+    padding: 5px 0 0;
+    font-size: 17px;
+    width: 43%;
+    line-height: 1.8em;
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 282px;
+  }
+}
+
+.product__buying {
+  width: 38%;
+  font-size: 15px;
+  font-weight: 400;
+  padding: 22px 0;
+  line-height: 1.6em;
+
+  @media (min-width: $tablet-width) {
+    align-self: flex-start;
+    padding: 5px 0 0;
+    font-size: 17px;
+    width: 43%;
+    line-height: 1.8em;
   }
 
   @media (min-width: $desktop-width) {
@@ -24,10 +49,11 @@
   position: relative;
 
   @media (min-width: $tablet-width) {
-    padding: 3.25em;
+    padding: 3.25em 50px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    // padding: 30px 27px;
   }
 
   @media (min-width: $desktop-width) {
@@ -41,6 +67,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    margin-bottom: 50px;
   }
 
   @media (min-width: $desktop-width) {
@@ -59,6 +86,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 43px;
+    line-height: 0.6em;
   }
 
   @media (min-width: $desktop-width) {
@@ -75,7 +103,9 @@
   @media (min-width: $tablet-width) {
     text-align: center;
     font-size: 17px;
-    width: 70px;
+    width: 110px;
+    line-height: 1em;
+    text-transform: uppercase;
   }
 
   @media (min-width: $desktop-width) {
@@ -95,7 +125,10 @@
 
   @media (min-width: $tablet-width) {
     align-self: flex-start;
-    width: 40%;
+    width: 43%;
+    margin-top: 5px;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -108,6 +141,10 @@
 .product__table th {
   width: 36%;
   padding-right: 30px;
+
+  @media (min-width:$tablet-width) {
+    width: 33%;
+  }
 
   @media (min-width: $desktop-width) {
     text-align: left;
@@ -147,6 +184,8 @@
 
   @media (min-width: $tablet-width) {
     width: auto;
+    font-size: 19px;
+    margin: 30px 0;
   }
 
   @media (min-width: $desktop-width) {
