--- a/source/sass/blocks/site-theme.scss
+++ b/source/sass/blocks/site-theme.scss
@@ -81,3 +81,18 @@
     height: auto;
   }
 }
+
+.site-theme::before,
+.site__themes::before {
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    content: "";
+    bottom: -15px;
+    width: 100%;
+    background-image: url(../../img/bg-zigzag-fill.svg);
+    background-repeat: repeat-x;
+    height: 32px;
+    z-index: 23;
+    background-size: 100% 100%;
+  }
+}
